  attributes (Issue #2570)
* Ported gallery image layout to base theme (Issue #2775)
* Better error handling when posts can't be parsed (Issue #2771)
* Use ``.theme`` files to store theme metadata (Issue #2758)
* New ``add_header_permalinks`` filter, for Sphinx-style header links
  (Issue #2636)
* Added alternate links for gallery translations (Issue #993)

Bugfixes
--------

* Save dependencies for template hooks properly (using .__doc__ or
  .template_registry_identifier for callables)
* Enable larger panorama thumbnails (Issue #2780)
* Disable ``archive_rss`` link handler, which was useless because no
  such RSS was ever generated (Issue #2783)
* Ignore files ending wih "bak" (Issue #2740)
* Use page.tmpl by default, which is inherited from story.tmpl (Issue
  #1891)

New in v7.8.5
=============

Math support changes
--------------------

* If you edited templates related to indexes and posts (``index.tmpl``,
  ``post.tmpl``, ``index_helper.tmpl``, ``post_helper.tmpl``) in your
  templates, you should adjust them to use ``math_helper.tmpl``.
* If you are using KaTeX, you should remove the CSS snippet from your
  configuration (templates), as that is now handled by Nikola.

Features
--------

* Get rid of ``THEME_REVEAL_CONFIG_*`` settings, use global context
  instead (Issue #2485)
* New emoji shortcode
* Add ``SECTION_PATH`` support to move the section indexes to a
  user-defined location (Issue #2738)
* Add a list of template variables to documentation (Issues #2328,
  #2712, #2259) and update the theming reference (Issue #2259)
* Add ``{post_title}`` tag for Read More links (Issue #2709)
* Include MathJax config only when needed (via Issue #2715)
* Include KaTeX CSS automatically when needed (Issue #2715)
* Split out math code into new ``math_helper.tmpl`` template (Issue
  #2715)
* Added ``jpegoptim_progressive`` filter to convert jpeg images to progressive
  jpegs.

Bugfixes
--------

* Open ``127.0.0.1`` when using ``nikola serve -b`` and default