@@ -16,8 +16,10 @@ Features
 Bugfixes
 --------
 
-* Save dependencies for template hooks properly (using .__doc__ or
-  .template_registry_identifier for callables)
+* Use ``locale.getdefaultlocale()`` for better locale guessing
+  (credit: @madduck)
+* Save dependencies for template hooks properly (using ``.__doc__`` or
+  ``.template_registry_identifier`` for callables)
 * Enable larger panorama thumbnails (Issue #2780)
 * Disable ``archive_rss`` link handler, which was useless because no
   such RSS was ever generated (Issue #2783)
